# SSMI-example

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
SSMI-Mapping/: CMakeLists.txt
SSMI-Mapping/launch/: semantic_octomap.launch
SSMI-Mapping/params/: semantic_cloud.yaml
SSMI-Mapping/scripts/: semantic_sensor.py  semantic_sensor_node.py
SSMI-Planning/: CMakeLists.txt
SSMI-Planning/params/: exploration_params.yaml
SSMI-Planning/src/: astar_cpp.py  collision_cpp.py  costmap.py  footprint_points.py  footprints.py  path_navigation_node_position.py  semantic_exploration_node.py  utils.py
scripts/: create_tmux_session.sh  launch_ssmi_example.sh
semantic_segmentation_husky/: package.xml
semantic_segmentation_husky/config/: label_colors_husky.yaml
semantic_segmentation_husky/config/SSMI/: semantic_sensor.py  semantic_sensor_node.py
semantic_segmentation_husky/launch/: jackal_pd.launch  seg_husky.launch
semantic_segmentation_husky/rviz/: octomap_cam.rviz
semantic_segmentation_husky/scripts/: dynamic_tf.py
semantic_segmentation_husky/sdf/: husky.sdf
ssmi_ws/scripts/: kill_ssmi_example.sh
ssmi_ws/src/car_control/: CMakeLists.txt
ssmi_ws/src/car_control/config/: power_diagram_gains.yaml
ssmi_ws/src/semantic_segmentation_husky/: CMakeLists.txt
ssmi_ws/src/semantic_segmentation_husky/rviz/: octomap_cam.rviz
ssmi_ws/src/semantic_segmentation_husky/scripts/: dynamic_tf.py
ssmi_ws/src/semantic_segmentation_husky/sdf/: world.sdf
